# research_agent

./: .gitignore  CODEBASE_OVERVIEW.md  DEV_LOG.md  FRONTEND_QUICKSTART.md  GROQ_INTEGRATION.md  IEEE.docx  NEXUS System Context.md  README.md  README_INTEGRATION.md  SYSTEM_STATUS.md  alignment_report.md.resolved  api.py  architecture.md  cli.py  fast_rlm_inspect.txt  fast_rlm_proxy.py  go.mod  ieee_claims.txt  inspect_fast_rlm.py  knowledge_graph.py  knowledgebase.py  presentation_demo.bat  progress_report.md.resolved  pyproject.toml  requirements-phase1.txt  research_agent.code-workspace  run_frontend.bat  run_frontend.ps1  run_frontend.py  run_research_agent.py  setup_qdrant.py  start_wsl_vllm.sh  test_airllm_pipeline.py  test_frontend_backend_connection.html  test_groq_integration.py  test_integration.py  test_neo4j.py  test_proxy_8001.py  test_vllm.py  tmp_read_docx.py  (+1 more)
agents/: __init__.py  analysis_agent.py  collaboration_agent.py  data_processing_agent.py  knowledge_graph_agent.py  literature_review_agent.py  writing_assistant_agent.py
chunks/: 2301.08770-chunks.jsonl  2301.08770.jsonl  2502.10794-chunks.jsonl  2502.10794.jsonl
config/: config.yaml
core/: __init__.py  agent_tools.py  base_agent.py  context.py  graph.py  llm_provider.py  orchestrator.py  reasoning.py  registry.py  researcher_agent.py  state.py  workflow.py
docs/: prisma_stage_mapping.md
frontend/: kg_demo.html  research-assistant-ui (1).html
frontend-next/: package-lock.json  package.json
paperconstructor/: __init__.py  constructors.py  counstruct_example.py  pyproject.toml
(+56 files in other folders)
