[project]
name = "research_agent"
version = "0.1.0"
description = "A sophisticated research workflow orchestration system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "langchain>=0.1.0",
    "qdrant-client>=1.0.0",
    "arxiv>=1.0.0",
    "tiktoken>=0.1.0",
    "numpy>=1.0.0",
    "gensim>=4.0.0",
    "requests>=2.0.0",
    "PyPDF2>=3.0.0"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=research_agent --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
